GNOME Bugzilla – Bug 776798
typo fixes
Last modified: 2017-03-26 11:20:06 UTC
Created attachment 342749 [details] [review] s/Instantiation/instantiation/ Attached 3 patches fixing typos on 3 different words. Origin: https://bugs.launchpad.net/inkscape/+bug/1653371
Created attachment 342750 [details] [review] s/unknow/unknown/
Created attachment 342751 [details] [review] s/occured/occurred/
Review of attachment 342749 [details] [review]: Looks good.
Review of attachment 342750 [details] [review]: It seems you mixed the patch with the previous one. Otherwise feel free to push the unknown only patch
Review of attachment 342751 [details] [review]: Looks good.
Comment on attachment 342749 [details] [review] s/Instantiation/instantiation/ ahah, the commit message is wrong here.
Created attachment 347620 [details] [review] s/Instanciation/instantiation/ this is with the right commit message.
Comment on attachment 342750 [details] [review] s/unknow/unknown/ sigh, I must have fucked up with git, actually this was reverting the previous patch doing s/Instanciation/instantiation/ ...
Created attachment 347621 [details] [review] s/unknow/unknown/ Thanks for reviewing. It should be correct now.
Thanks