Typo fix s/Instanciation/instantiation/

https://bugzilla.gnome.org/show_bug.cgi?id=776798